--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,4 +29,4 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+jetbrains-kotlin-serializer = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
